styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "@assets/mixins";

html {
    padding: 0;
    margin: 0;
    /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */

    font-family: HelveticaNowText, Helvetica, Arial, sans-serif;

    &::-webkit-scrollbar {
        width: 8px;
        border-radius: 8rem;
    }

    &::-webkit-scrollbar-track {
        background-color: #fff;
    }

    &::-webkit-scrollbar-thumb {
        background-color: RGBA(var(--color-blue-special));
        box-shadow: inset 0 0 6px RGBA(0, 0, 0, 0.5);
        border-radius: 8rem;
    }

    &::-webkit-scrollbar-thumb:window-inactive {
        background-color: RGBA(var(--color-blue-special));
    }
}

body {
    line-height: 1;
}

a {
    color: inherit;
    text-decoration: none;
}

*,
::before,
::after {
    box-sizing: border-box;

    -webkit-tap-highlight-color: transparent;
}

#__next {
    font-size: 15px;
    font-family: HelveticaNowText, Helvetica, Arial, sans-serif;
    font-weight: 400;
    letter-spacing: -0.05em;
    color: #191919;

    @media only screen and (min-width: 1024px) {
        font-size: 1.2vw;
    }

    @media only screen and (min-width: 1024px) and (max-width: 1125px) {
        font-size: 13.5px;
    }

    @media only screen and (min-width: 1500px) {
        font-size: 18px;
    }
}

